Fixed alignment

--- a/scss/project.scss
+++ b/scss/project.scss
@@ -3,12 +3,12 @@
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 16px;
   grid-row-gap: 32px;
+  align-items: center;
   width: 70%;
 }
 
 .project {
   margin: 40px;
-  vertical-align: top;
 
   &__image {
     width: 100%;
